--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -55,7 +55,6 @@ The dataset contains `r ncol(marketing)` variables and `r nrow(marketing)` obser
 
 In the following section, we explore the relationship between advertising spend and revenue to determine whether a linear model is appropriate.
 
-
 ### Exploring Relationships in the Data {.unnumbered}
 
 Before constructing a regression model, it is important to explore the relationships between variables. This step helps verify modeling assumptions, such as linearity, and identify strong predictors. It also provides a first look at how the variables interact, revealing potential patterns or anomalies.
@@ -76,6 +75,7 @@ pairs.panels(
   main = "Pairwise Relationships in the 'marketing' Data"
 )
 ```
+
 Here, we exclude the binary variable `display` (column 4) from the matrix and use it only to color the points, distinguishing the two groups (orange for 0 and blue for 1). The resulting visualization presents:
 
 -   *Correlation coefficients* (upper triangle), summarizing the strength of linear associations between variables.
@@ -109,11 +109,9 @@ ggplot(marketing, aes(x = spend, y = revenue)) +
 @fig-scoter-plot-simple-reg shows the empirical relationship between `spend` and `revenue` in the *marketing* dataset. The scatter plot suggests a positive association, indicating that increased advertising expenditure is generally linked to higher revenue, a pattern consistent with a linear relationship.
 
 We model this association mathematically using a *simple linear regression model*, defined as:
-
 $$
-\hat{y} = b_0 + b_1 x
+\hat{y} = b_0 + b_1 x,
 $$
-
 where:
 
 -   $\hat{y}$ is the predicted value of the response variable (`revenue`),
@@ -155,11 +153,9 @@ summary(simple_reg)
 ```
 
 This output provides rich information about the model. At its core is the regression equation:
-
 $$
-\widehat{\text{revenue}} = `r round(simple_reg$coefficients[1], 2)` + `r round(simple_reg$coefficients[2], 2)` \times \text{spend}
+\widehat{\text{revenue}} = `r round(simple_reg$coefficients[1], 2)` + `r round(simple_reg$coefficients[2], 2)` \times \text{spend},
 $$
-
 where:
 
 -   The *intercept* ($b_0$) is `r round(simple_reg$coefficients[1], 2)`, representing the estimated revenue when no money is spent on advertising.
@@ -222,11 +218,9 @@ This approach is especially helpful when working with larger datasets or integra
 ### Residuals and Model Fit {.unnumbered}
 
 Residuals measure the difference between observed and predicted values, providing insight into how well the regression model fits the data. For a given observation $i$, the residual is calculated as:
-
 $$
-e_i = y_i - \hat{y}_i
+e_i = y_i - \hat{y}_i,
 $$
-
 where $y_i$ is the actual observed value and $\hat{y}_i$ is the predicted value from the regression model. @fig-residual-simple-reg visually depicts these residuals as dashed lines connecting observed outcomes to the fitted regression line.
 
 ```{r fig-residual-simple-reg, echo = FALSE, out.width = "80%", fig.cap = "Scatter plot of daily revenue (euros) versus daily spend (euros) for 40 observations. The orange line shows the fitted regression line, and the gray dashed lines indicate residuals, representing the vertical distances between the observed values and the predictions from the line."}
@@ -259,11 +253,9 @@ For example, suppose the 21st day in the dataset has a marketing spend of 25 eur
 Residuals play a crucial role in assessing model adequacy. Ideally, they should be randomly distributed around zero, suggesting that the model appropriately captures the relationship between variables. However, if residuals show systematic patterns, such as curves, clusters, or increasing spread, this may indicate the need to include additional predictors, transform variables, or use a non-linear model.
 
 The regression line is estimated using the *least squares* method, which finds the line that minimizes the *sum of squared residuals*, also known as the *sum of squared errors (SSE)*:
-
 $$
 \text{SSE} = \sum_{i=1}^{n} (y_i - \hat{y}_i)^2
 $$ {#eq-sse}
-
 where $n$ is the number of observations. This quantity corresponds to the total squared length of the orange dashed lines in @fig-residual-simple-reg. Minimizing SSE ensures that the estimated regression line best fits the observed data.
 
 In summary, residuals provide critical feedback on model performance. By analyzing the *marketing* dataset, we have demonstrated how to calculate and interpret residuals and how they guide model refinement. This foundational understanding of simple linear regression prepares us to evaluate model quality and to extend the framework to models with multiple predictors in the following sections.
@@ -277,11 +269,9 @@ Once we estimate a regression model, the next question is: *Is the relationship 
 In regression analysis, we are particularly interested in whether a predictor variable has a statistically significant relationship with the response variable. In simple linear regression, this involves testing whether the estimated slope $b_1$ from the sample provides evidence of a real linear association in the population, where the unknown population slope is denoted by $\beta_1$.
 
 The population regression model is
-
 $$
-y = \beta_0 + \beta_1x + \epsilon
+y = \beta_0 + \beta_1x + \epsilon,
 $$
-
 where:
 
 -   $\beta_0$ is the *population intercept*: the expected value of $y$ when $x = 0$,
@@ -291,26 +281,21 @@ where:
 -   $\epsilon$ is the *error term*, accounting for variability not captured by the linear model.
 
 The key question is: *Is* $\beta_1$ significantly different from zero? If $\beta_1 = 0$, then $x$ has *no linear effect* on $y$, and the model reduces to:
-
 $$
 y = \beta_0 + \epsilon.
 $$
 
 We formalize this question using the following hypotheses:
-
 $$
 \begin{cases}
   H_0: \beta_1 = 0 \quad \text{(no linear relationship between $x$ and $y$)} \\
   H_a: \beta_1 \neq 0 \quad \text{(a linear relationship exists between $x$ and $y$)}
 \end{cases}
 $$
-
 To test these hypotheses, we compute the *t-statistic* for the slope:
-
 $$
 t = \frac{b_1}{SE(b_1)},
 $$
-
 $SE(b_1)$ is the standard error of the slope estimate ($b_1$). This statistic follows a *t-distribution* with $n - 2$ degrees of freedom (in simple regression, 2 parameters are estimated), where $n$ is the number of observations. We then examine the *p-value*, which tells us how likely it would be to observe such a slope (or more extreme) if $H_0$ were true. A small *p*-value (typically below 0.05) leads us to reject the null hypothesis.
 
 Let us return to our regression model predicting `revenue` from `spend` in the *marketing* dataset:
@@ -346,11 +331,9 @@ This section introduces two key metrics: the *RSE*, which measures average predi
 How far off are our predictions (on average) from the actual values? That is what the Residual Standard Error (RSE) tells us. It measures the typical size of the residuals: the differences between observed and predicted values, as presented in @fig-residual-simple-reg (orange dashed lines). In other words, RSE estimates the average prediction error of the regression model.
 
 The formula for RSE is:
-
 $$
 RSE = \sqrt{\frac{SSE}{n-m-1}},
 $$
-
 where $SSE$ is defined in @eq-sse, $n$ is the number of observations, and $m$ is the number of predictors. The denominator ($n-m-1$) accounts for the degrees of freedom in the model, adjusting for the number of predictors being estimated.
 
 A smaller RSE indicates more accurate predictions. For our simple linear regression model using the *marketing* dataset, the RSE is:
@@ -368,11 +351,9 @@ This value tells us the typical size of prediction errors, in euros. While lower
 If you could explain all the variation in revenue using just one line, how good would that line be? That is the idea behind R-squared ($R^2$), a statistic that measures the proportion of variability in the response variable explained by the model.
 
 The formula is:
-
 $$
 R^2 = 1 - \frac{SSE}{SST},
 $$
-
 where $SSE$ is the sum of squared residuals (@eq-sse) and $SST$ is the total sum of squares, representing the total variation in the response. $R^2$ ranges from 0 to 1. A value of 1 means the model perfectly explains the variation in the outcome; a value of 0 means it explains none of it.
 
 You can visualize this concept in @fig-scoter-plot-simple-reg, where the red regression line summarizes how `revenue` changes with `spend`. The $R^2$ value quantifies how well this line captures the overall pattern in the *marketing* data:
@@ -384,11 +365,9 @@ round(summary(simple_reg)$r.squared, 3)
 This means that approximately `r round(summary(simple_reg)$r.squared, 3) * 100`% of the variation in daily revenue is explained by advertising spend.
 
 In simple linear regression, there is a direct connection between $R^2$ and the correlation coefficient introduced in @sec-ch5-correlation-test of Chapter [-@sec-ch5-statistics]. Specifically, $R^2$ is the square of the Pearson correlation coefficient $r$ between the predictor and the response:
-
 $$
-R^2 = r^2
+R^2 = r^2.
 $$
-
 Let us verify this in the *marketing* data:
 
 ```{r}
@@ -408,11 +387,9 @@ While a higher $R^2$ suggests a better fit, it does not guarantee that the model
 ### Adjusted R-squared {.unnumbered}
 
 Adding more predictors to a regression model will always increase $R^2$, even if those predictors are not truly useful. This is where *Adjusted* $R^2$ comes in. It compensates for the number of predictors in the model, providing a more honest measure of model quality. Its formula is:
-
 $$
 \text{Adjusted } R^2 = 1 - \left(1 - R^2\right) \times \frac{n - 1}{n-m-1},
 $$
-
 where $n$ is the number of observations and $m$ is the number of predictors.
 
 In simple linear regression (where $m=1$), Adjusted $R^2$ is nearly the same as $R^2$. However, as we add more variables in multiple regression models, Adjusted $R^2$ becomes essential. It penalizes complexity and helps identify whether additional predictors genuinely improve model performance.
@@ -450,19 +427,15 @@ In the next section, we extend the simple linear regression framework to include
 We now move beyond simple linear regression and explore models with more than one predictor. This brings us into the realm of *multiple regression*, a framework that captures the simultaneous effects of multiple variables on an outcome. In most real-world scenarios, responses are rarely driven by a single factor, multiple regression helps us model this complexity.
 
 To illustrate, we expand the previous model, which included only `spend` as a predictor, by adding `display`, an indicator of whether a *display (banner) advertising campaign* was active. This additional predictor allows us to assess its impact on revenue. The general equation for a multiple regression model with $m$ predictors is:
-
 $$
-\hat{y} = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m
+\hat{y} = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
 $$
-
 where $b_0$ is the intercept, and $b_1, b_2, \dots, b_m$ represent the estimated effects of each predictor on the response variable.
 
 For our case, the equation with two predictors, `spend` and `display`, is:
-
 $$
-\widehat{\text{revenue}} = b_0 + b_1 \times \text{spend} + b_2 \times \text{display}
+\widehat{\text{revenue}} = b_0 + b_1 \times \text{spend} + b_2 \times \text{display},
 $$
-
 where `spend` represents daily advertising expenditure and `display` is a categorical variable (`yes` or `no`), which R automatically converts into a binary indicator. In this case, `display = 1` corresponds to an active display campaign, while `display = 0` means no campaign was running. As with other factor variables in R, the first level (`no`) serves as the reference category when converting to dummy (0/1) indicators (alphabetically, unless explicitly changed).
 
 ### Fitting the Multiple Regression Model in R {.unnumbered}
@@ -476,9 +449,8 @@ summary(multiple_reg)
 ```
 
 This fits a model with both `spend` and `display` as predictors of `revenue`. The estimated regression equation is:
-
 $$
-\widehat{\text{revenue}} = `r round(multiple_reg$coefficients[1], 2)` + `r round(multiple_reg$coefficients[2], 2)` \times \text{spend} + `r round(multiple_reg$coefficients[3], 2)` \times \text{display}
+\widehat{\text{revenue}} = `r round(multiple_reg$coefficients[1], 2)` + `r round(multiple_reg$coefficients[2], 2)` \times \text{spend} + `r round(multiple_reg$coefficients[3], 2)` \times \text{display}.
 $$
 
 Let us interpret each term:
@@ -494,17 +466,15 @@ These interpretations build on our earlier regression concepts, showing how mult
 ### Making Predictions {.unnumbered}
 
 Consider a scenario where the company spends 25 euros on advertising while running a display campaign (`display = 1`). Using the regression equation, the predicted revenue is:
-
 $$
-\widehat{\text{revenue}} = `r round(multiple_reg$coefficients[1], 2)` + `r round(multiple_reg$coefficients[2], 2)` \times 25 + `r round(multiple_reg$coefficients[3], 2)` \times 1 = `r round(multiple_reg$coefficients[1] + multiple_reg$coefficients[2] * 25 + multiple_reg$coefficients[3] * 1, 2)`
+\widehat{\text{revenue}} = `r round(multiple_reg$coefficients[1], 2)` + `r round(multiple_reg$coefficients[2], 2)` \times 25 + `r round(multiple_reg$coefficients[3], 2)` \times 1 = `r round(multiple_reg$coefficients[1] + multiple_reg$coefficients[2] * 25 + multiple_reg$coefficients[3] * 1, 2)`.
 $$
 
 Thus, the predicted revenue for that day is approximately `r round(multiple_reg$coefficients[1] + multiple_reg$coefficients[2] * 25 + multiple_reg$coefficients[3] * 1, 2)` euros.
 
 The residual (prediction error) for a specific observation is calculated as the difference between the actual and predicted revenue:
-
 $$
-\text{Residual} = y - \hat{y} = `r marketing[21, "revenue"]` - `r round(multiple_reg$coefficients[1] + multiple_reg$coefficients[2] * 25 + multiple_reg$coefficients[3] * 1, 2)` = `r round(multiple_reg$residuals[21], 2)`
+\text{Residual} = y - \hat{y} = `r marketing[21, "revenue"]` - `r round(multiple_reg$coefficients[1] + multiple_reg$coefficients[2] * 25 + multiple_reg$coefficients[3] * 1, 2)` = `r round(multiple_reg$residuals[21], 2)`.
 $$
 
 The prediction error is less than that of the simple regression model, confirming that including `display` improves predictive accuracy.
@@ -642,12 +612,10 @@ By extending regression beyond continuous responses, these models offer both int
 
 Can we predict whether a customer will leave a service based on their usage behavior? This is a classic binary classification problem, first introduced in Chapter [-@sec-ch7-classification-knn] with k-Nearest Neighbors (kNN) and revisited in Chapter [-@sec-ch9-bayes] with the Naive Bayes classifier. Those models provided flexible, data-driven solutions to classification. Now, we shift to a *model-based* approach grounded in statistical theory: *logistic regression*.
 
-Logistic regression is a generalized linear model specifically designed for binary outcomes. It estimates the *probability* that an observation belongs to a particular class (e.g., churn = 1) by applying the *logit function*, which transforms a linear combination of predictors into the log-odds of the outcome:
-
+Logistic regression is a generalized linear model specifically designed for binary outcomes. It estimates the *probability* that an observation belongs to a particular class (e.g., churn = "yes") by applying the *logit function*, which transforms a linear combination of predictors into the log-odds of the outcome:
 $$
 \text{logit}(p) = \ln\left(\frac{p}{1 - p}\right) = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
 $$
-
 where $p$ is the probability that the outcome is 1. The logit transformation ensures that predictions remain between 0 and 1, making logistic regression well-suited for modeling binary events.
 
 Unlike kNN and Naive Bayes, logistic regression provides interpretable model coefficients and naturally handles numeric and binary predictors. It also offers a foundation for many advanced models used in applied machine learning and data science.
@@ -673,8 +641,7 @@ The dataset is an R data frame with `r nrow(churn)` observations and `r ncol(chu
 We define a formula object to specify the relationship between the target variable (`churn`) and the predictors:
 
 ```{r}
-formula = churn ~ account.length + voice.messages + day.mins + eve.mins + 
-                         night.mins + intl.mins + customer.calls + intl.plan + voice.plan
+formula = churn ~ account.length + voice.messages + day.mins + eve.mins + night.mins + intl.mins + customer.calls + intl.plan + voice.plan
 ```
 
 To fit the logistic regression model, we use the `glm()` function, which stands for *generalized linear model*. This function allows us to specify the family of distributions and link functions, making it suitable for logistic regression. This function is part of base R, so no need to install any additional packages. The general syntax for logistic regression is:
@@ -715,7 +682,9 @@ Also, we did not manually create dummy variables for `intl.plan` and `voice.plan
 
 Curious how logistic regression compares to kNN or Naive Bayes in terms of predictive accuracy? You will get to see that soon, in the case study later in this chapter. We will not only compare their accuracy, but also their interpretability and suitability for different types of decisions.
 
-Finally, just like the `lm()` function, the `glm()` model supports the `predict()` function. In the case of logistic regression, `predict()` returns the *predicted probabilities* of the reference class (typically the first level of the outcome factor). We will explore how to interpret and apply these probabilities in the upcoming sections.
+Finally, similar to the `lm()` function, the `glm()` model also supports the `predict()` function. In the case of logistic regression, `predict()` returns the predicted probabilities of the **non-reference class**—that is, the second level of the outcome factor by default. The reference class is determined by the ordering of factor levels in the response variable and can be explicitly set using the `relevel()` function. We will explore how to interpret and apply these predicted probabilities in the following sections.
+
+> *Note:* In logistic regression using `glm()`, the `predict()` function always returns the probability of the **non-reference class** (typically the second factor level). For example, the outcome variable `churn` has levels `"yes"` and `"no"`, and `"yes"` is the first factor level (thus the reference level). In this case, `predict(glm_churn, type = "response")` returns the probability of `"no"`. To change which class is treated as the reference, use `relevel(churn, ref = "no")` before fitting the model.
 
 ## Poisson Regression for Modeling Count Data
 
@@ -730,10 +699,10 @@ Unlike linear regression, which assumes normally distributed residuals, Poisson 
 Like logistic regression, Poisson regression belongs to the family of generalized linear models (GLMs), extending the ideas introduced in the previous section.
 
 The model is defined as:
-
 $$
 \ln(\lambda) = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
-$$ where $\lambda$ represents the expected count of events. The predictors $x_1, x_2, \dots, x_m$ affect the log of $\lambda$. The $\ln$ symbol refers to the *natural logarithm*, a transformation that compresses large values and stretches small ones. This helps to linearize relationships. Crucially, this transformation ensures that predicted counts are always positive, which aligns with the nature of count data.
+$$ 
+where $\lambda$ represents the expected count of events. The predictors $x_1, x_2, \dots, x_m$ affect the log of $\lambda$. The $\ln$ symbol refers to the *natural logarithm*, a transformation that compresses large values and stretches small ones. This helps to linearize relationships. Crucially, this transformation ensures that predicted counts are always positive, which aligns with the nature of count data.
 
 In the next subsection, we will fit a Poisson regression model in R using the *churn* dataset to explore what drives customer service call frequency.
 
@@ -776,11 +745,9 @@ The output provides:
 A small *p*-value (typically less than 0.05) suggests that the predictor has a statistically significant effect on the call frequency. If a variable such as `voice.messages` has a large *p*-value, it may not add meaningful explanatory power and could be removed to simplify the model.
 
 Interpreting coefficients in Poisson regression is different from linear regression. Coefficients are on the log scale: each unit increase in a predictor multiplies the expected count by $e^{b}$, where $b$ is the coefficient. For instance, if the coefficient for `intl.plan` is 0.3:
-
 $$
-e^{0.3} - 1 \approx 0.35
+e^{0.3} - 1 \approx 0.35.
 $$
-
 This means customers with an international plan are expected to make about 35% more service calls than those without one, holding other predictors constant.
 
 > *Practice:* Suppose a predictor has a coefficient of $-0.2$. What is the expected percentage change in service calls? Compute $e^{-0.2} - 1$ and interpret the result.
@@ -808,21 +775,17 @@ Due to its structured procedure, stepwise regression is especially useful for sm
 How do we know if a simpler model is better, or if we have left out something essential? This question lies at the heart of model selection. When faced with multiple competing models, we need a principled way to compare them, balancing model fit with interpretability.
 
 One such tool is the *Akaike Information Criterion (AIC)*. AIC offers a structured trade-off between model complexity and goodness of fit: lower AIC values indicate a more favorable balance between explanatory power and simplicity. It is defined as
-
 $$
 AIC = 2m + n \log\left(\frac{SSE}{n}\right),
 $$
-
 where $m$ denotes the number of estimated parameters in the model, $n$ is the number of observations, and $SSE$ is the sum of squared errors (as introduced in @eq-sse), capturing the total unexplained variability in the response variable.
 
 Unlike $R^2$, which always increases as more predictors are added, AIC explicitly penalizes model complexity. This penalty helps prevent overfitting (where a model describes random noise rather than meaningful structure) by favoring simpler models that still provide a good fit. AIC serves as a model “scorecard”: it rewards goodness of fit while discouraging unnecessary complexity, much like preferring the simplest recipe that still delivers excellent flavor.
 
 While AIC is widely used, it is not the only available criterion. An alternative is the *Bayesian Information Criterion (BIC)*, which applies a stronger penalty for model complexity. It is defined as
-
 $$
 BIC = \log(n) \times m + n \log\left(\frac{SSE}{n}\right),
 $$
-
 where the terms are as previously defined. The penalty in BIC grows with the sample size $n$, causing it to favor more parsimonious models as datasets become larger. BIC may be more appropriate when the goal is to identify the true underlying model, while AIC is often preferred for optimizing predictive accuracy. The choice depends on context, but both criteria reflect the same core idea: balancing fit with parsimony.
 
 By default, the `step()` function in R uses AIC as its model selection criterion. We will demonstrate this process in the next subsection.
@@ -883,9 +846,8 @@ summary(stepwise_model)
 ```
 
 Stepwise regression yields a simpler model with just two predictors: `clicks` and `display`. The resulting regression equation is:
-
 $$
-\widehat{\text{revenue}} = `r round(stepwise_model$coefficients[1], 2)` + `r round(stepwise_model$coefficients[2], 2)` \times \text{clicks} + `r round(stepwise_model$coefficients[3], 2)` \times \text{display}
+\widehat{\text{revenue}} = `r round(stepwise_model$coefficients[1], 2)` + `r round(stepwise_model$coefficients[2], 2)` \times \text{clicks} + `r round(stepwise_model$coefficients[3], 2)` \times \text{display}.
 $$
 
 Model performance improves on several fronts. The *RSE*, which measures average prediction error, decreases from `r round(sqrt(sum(residuals(full_model)^2)/df.residual(full_model)), 2)` to `r round(sqrt(sum(residuals(stepwise_model)^2)/df.residual(stepwise_model)), 2)`. The *Adjusted R-squared* increases from `r round(summary(full_model)$adj.r.squared, 2)*100`% to `r round(summary(stepwise_model)$adj.r.squared, 2)*100`%, suggesting that the final model explains a greater proportion of variability in `revenue` while using fewer predictors. This reflects an improvement in both parsimony and interpretability.
@@ -918,9 +880,8 @@ Linear regression assumes a constant rate of change, represented as a straight l
 As seen in the plot, the linear model underestimates prices for newer homes and overestimates them for older ones. This mismatch highlights the limitations of a strictly linear model.
 
 To better model the observed trend, we can introduce non-linear terms into the regression equation. If the relationship resembles a curve, a quadratic model may be appropriate:
-
 $$
-\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2
+\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2.
 $$
 
 This formulation includes both the original predictor and its squared term, allowing the model to bend with the data. Although it includes a non-linear transformation, the model remains a *linear regression model* because it is linear in the parameters ($b_0, b_1, b_2$). The coefficients are still estimated using ordinary least squares.
@@ -952,10 +913,10 @@ Now that we have seen how polynomial regression can capture non-linear relations
 ## Polynomial Regression in Practice
 
 Polynomial regression extends linear regression by incorporating higher-degree terms of the predictor variable, such as squared ($x^2$) or cubic ($x^3$) terms. This allows the model to capture non-linear relationships while remaining *linear in the coefficients*, meaning the model can still be estimated using ordinary least squares. The general form of a polynomial regression model is:
-
 $$
 \hat{y} = b_0 + b_1 \times x + b_2 \times x^2 + \dots + b_d \times x^d,
-$$ where $d$ represents the degree of the polynomial. While polynomial regression increases modeling flexibility, high-degree polynomials ($d > 3$) risk overfitting by capturing random noise, especially near the boundaries of the predictor range.
+$$ 
+where $d$ represents the degree of the polynomial. While polynomial regression increases modeling flexibility, high-degree polynomials ($d > 3$) risk overfitting by capturing random noise, especially near the boundaries of the predictor range.
 
 ::: {#ex-polynomial-regression .example}
 To illustrate polynomial regression, we use the *house* dataset from the **liver** package. This dataset includes housing prices and features such as age, proximity to public transport, and local amenities. Our goal is to model `unit.price` (price per unit area) as a function of `house.age` and compare the performance of simple linear and polynomial regression.
@@ -981,9 +942,8 @@ summary(simple_reg_house)
 The *R-squared (*$R^2$) value for this model is `r round(summary(simple_reg_house)$r.squared, 2)`, indicating that only `r round(summary(simple_reg_house)$r.squared * 100, 2)`% of the variability in house prices is explained by `house.age`. This suggests the linear model may not fully capture the relationship.
 
 Next, we fit a quadratic polynomial regression model to allow for curvature:
-
 $$
-\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2
+\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2.
 $$
 
 In R, this can be implemented using the `poly()` function, which fits orthogonal polynomials by default. These have numerical stability benefits but are less interpretable than raw powers:
@@ -1022,16 +982,16 @@ To demonstrate model diagnostics, we evaluate the multiple regression model cons
 
 We generate diagnostic plots using:
 
-```{r}
+```{r out.width = "100%"}
 #| label: fig-ch10-model-diagnostics
 #| echo: true
 #| layout-nrow: 2
 #| fig-cap: "Diagnostic plots for assessing regression model assumptions."
 #| fig-subcap: 
-#|   - ""
-#|   - ""
-#|   - ""
-#|   - ""
+#|   - "Residuals vs Fitted"
+#|   - "Normal Q-Q"
+#|   - "Scale-Location"
+#|   - "Residuals vs Leverage"
 
 stepwise_model = lm(revenue ~ clicks + display, data = marketing)
 
@@ -1086,7 +1046,7 @@ formula = churn ~ account.length + voice.plan + voice.messages +
 
 This case study follows the Data Science Workflow introduced in Chapter [-@sec-ch2-intro-data-science]. For research context, data understanding, and exploratory analysis of the *churn* dataset, see Section [-@sec-ch4-EDA-churn]. In the next subsection, we begin the data preparation process by partitioning the dataset into training and testing sets.
 
-### Partitioning and Preprocessing {.unnumbered}
+### Data Setup to Model {.unnumbered}
 
 Partitioning the data into training and test sets is a standard step in predictive modeling that allows us to estimate how well a model will generalize to new observations. A carefully structured split helps ensure that model evaluation is both valid and unbiased.
 
@@ -1125,9 +1085,13 @@ Next, we generate predicted probabilities on the test set:
 logistic_probs = predict(logistic_model, newdata = test_set, type = "response")
 ```
 
-The `predict()` function returns the estimated probability that each customer in the test set has churned, that is, the probability of `churn = "yes"`.
+By default, the `predict()` function returns the predicted probability of the **non-reference class** (typically the second factor level of the response variable). In the `churn` dataset, the outcome variable has two levels: `"yes"` and `"no"`. Since `"yes"` is the first factor level (and therefore the reference level), the output of `predict()` corresponds to the probability of `"no"`. To reverse this and obtain probabilities for `"yes"`, you can redefine the reference level of the data before partitioning and fitting the mode:
 
-> *Reflection:* How might we convert these predicted probabilities into binary class labels? What threshold would you use?
+```r
+churn$churn = relevel(churn$churn, ref = "no")
+```
+
+> *Reflection:* How might we convert these predicted probabilities into binary class labels? What threshold would you use? What happens if you change the reference level of the `churn` variable and repeat the process? Does the interpretation of the predicted probabilities change?
 
 ### Training the Naive Bayes Model {.unnumbered}
 
@@ -1163,7 +1127,7 @@ We apply min-max scaling and binary encoding using the `scaler = "minmax"` optio
 
 ```{r}
 knn_probs = kNN(formula = formula, train = train_set, 
-                  test = test_set, k = 5, scaler = "minmax", type = "prob")
+                test = test_set, k = 5, scaler = "minmax", type = "prob")
 ```
 
 This ensures that all numeric predictors are scaled to the \[0, 1\] range, and binary categorical variables are appropriately encoded for use in distance computations.
@@ -1195,11 +1159,11 @@ We visualize all three ROC curves in a single plot:
 ```{r out.width = "90%"}
 ggroc(list(roc_logistic, roc_bayes, roc_knn), size = 0.8) + 
   scale_color_manual(values = c("#377EB8", "#E66101", "#4DAF4A"),
-                     labels = c(
-                       paste("Logistic (AUC =", round(auc(roc_logistic), 3), ")"),
-                       paste("Naive Bayes (AUC =", round(auc(roc_bayes), 3), ")"),
-                       paste("kNN (AUC =", round(auc(roc_knn), 3), ")")
-                     )) +
+           labels = c(
+             paste("Logistic (AUC =", round(auc(roc_logistic), 3), ")"),
+             paste("Naive Bayes (AUC =", round(auc(roc_bayes), 3), ")"),
+             paste("kNN (AUC =", round(auc(roc_knn), 3), ")")
+           )) +
   ggtitle("ROC Curves with AUC for Three Models") + 
   theme(legend.title = element_blank(), legend.position = c(.7, .3))
 ```
