--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -306,7 +306,7 @@
 \title{Data Science Foundations and Machine Learning with R: From Data
 to Decisions}
 \author{\href{https://www.uva.nl/profile/a.mohammadi}{{Reza Mohammadi}}}
-\date{5 October 2025}
+\date{6 October 2025}
 
 \begin{document}
 \maketitle
@@ -13989,31 +13989,30 @@ Where:
 
 \begin{itemize}
 \item
-  \(P(A|B)\) is the \emph{posterior probability}, the probability of
-  event \(A\) (the hypothesis) given that event \(B\) (the evidence) has
+  \(P(A|B)\) is the posterior probability, the probability of event
+  \(A\) (the hypothesis) given that event \(B\) (the evidence) has
   occurred.
 \item
-  \(P(A \cap B)\) is the \emph{joint probability} that both events \(A\)
-  and \(B\) occur.
+  \(P(A \cap B)\) is the joint probability that both events \(A\) and
+  \(B\) occur.
 \item
-  \(P(B)\) is the \emph{marginal probability} or \emph{evidence},
-  quantifying the total probability of observing event \(B\) across all
-  possible outcomes.
+  \(P(B)\) is the marginal probability or evidence, quantifying the
+  total probability of observing event \(B\) across all possible
+  outcomes.
 \end{itemize}
 
 To clarify the components of Bayes' Theorem, Figure
 \ref{fig-venn-diagram} provides a visual interpretation using a Venn
 diagram. The overlapping region between the circle and the octagon
-represents the \emph{joint probability} \(P(A \cap B)\), while the
-entire area of the octagon corresponds to the \emph{marginal
-probability} \(P(A)\), and the entire area of the circle corresponds to
-\(P(B)\).
+represents the joint probability \(P(A \cap B)\), while the entire area
+of the octagon corresponds to the marginal probability \(P(A)\), and the
+entire area of the circle corresponds to \(P(B)\).
 
 \begin{figure}[H]
 
 \centering{
 
-\includegraphics[width=0.7\linewidth,height=\textheight,keepaspectratio]{images/ch9_Venn-diagram_probabilities.png}
+\includegraphics[width=0.8\linewidth,height=\textheight,keepaspectratio]{images/ch9_Venn-diagram_probabilities.png}
 
 }
 
@@ -15534,13 +15533,9 @@ that increased advertising expenditure is generally linked to higher
 revenue, a pattern consistent with a linear relationship.
 
 We model this association mathematically using a \emph{simple linear
-regression model}, defined as:
-
-\[
-\hat{y} = b_0 + b_1 x
-\]
-
-where:
+regression model}, defined as: \[
+\hat{y} = b_0 + b_1 x,
+\] where:
 
 \begin{itemize}
 \item
@@ -15642,13 +15637,9 @@ Once the model is fitted, we can summarize the results using the
 \end{Shaded}
 
 This output provides rich information about the model. At its core is
-the regression equation:
-
-\[
-\widehat{\text{revenue}} = 15.71 + 5.25 \times \text{spend}
-\]
-
-where:
+the regression equation: \[
+\widehat{\text{revenue}} = 15.71 + 5.25 \times \text{spend},
+\] where:
 
 \begin{itemize}
 \item
@@ -15773,13 +15764,9 @@ integrating regression predictions into automated workflows.
 
 Residuals measure the difference between observed and predicted values,
 providing insight into how well the regression model fits the data. For
-a given observation \(i\), the residual is calculated as:
-
-\[
-e_i = y_i - \hat{y}_i
-\]
-
-where \(y_i\) is the actual observed value and \(\hat{y}_i\) is the
+a given observation \(i\), the residual is calculated as: \[
+e_i = y_i - \hat{y}_i,
+\] where \(y_i\) is the actual observed value and \(\hat{y}_i\) is the
 predicted value from the regression model.
 Figure~\ref{fig-residual-simple-reg} visually depicts these residuals as
 dashed lines connecting observed outcomes to the fitted regression line.
@@ -15822,13 +15809,10 @@ predictors, transform variables, or use a non-linear model.
 The regression line is estimated using the \emph{least squares} method,
 which finds the line that minimizes the \emph{sum of squared residuals},
 also known as the \emph{sum of squared errors (SSE)}:
-
 \begin{equation}\phantomsection\label{eq-sse}{
 \text{SSE} = \sum_{i=1}^{n} (y_i - \hat{y}_i)^2
-}\end{equation}
-
-where \(n\) is the number of observations. This quantity corresponds to
-the total squared length of the orange dashed lines in
+}\end{equation} where \(n\) is the number of observations. This quantity
+corresponds to the total squared length of the orange dashed lines in
 Figure~\ref{fig-residual-simple-reg}. Minimizing SSE ensures that the
 estimated regression line best fits the observed data.
 
@@ -15858,13 +15842,9 @@ whether the estimated slope \(b_1\) from the sample provides evidence of
 a real linear association in the population, where the unknown
 population slope is denoted by \(\beta_1\).
 
-The population regression model is
-
-\[
-y = \beta_0 + \beta_1x + \epsilon
-\]
-
-where:
+The population regression model is \[
+y = \beta_0 + \beta_1x + \epsilon,
+\] where:
 
 \begin{itemize}
 \item
@@ -15880,30 +15860,20 @@ where:
 
 The key question is: \emph{Is} \(\beta_1\) significantly different from
 zero? If \(\beta_1 = 0\), then \(x\) has \emph{no linear effect} on
-\(y\), and the model reduces to:
-
-\[
+\(y\), and the model reduces to: \[
 y = \beta_0 + \epsilon.
 \]
 
-We formalize this question using the following hypotheses:
-
-\[
+We formalize this question using the following hypotheses: \[
 \begin{cases}
   H_0: \beta_1 = 0 \quad \text{(no linear relationship between $x$ and $y$)} \\
   H_a: \beta_1 \neq 0 \quad \text{(a linear relationship exists between $x$ and $y$)}
 \end{cases}
-\]
-
-To test these hypotheses, we compute the \emph{t-statistic} for the
-slope:
-
-\[
+\] To test these hypotheses, we compute the \emph{t-statistic} for the
+slope: \[
 t = \frac{b_1}{SE(b_1)},
-\]
-
-\(SE(b_1)\) is the standard error of the slope estimate (\(b_1\)). This
-statistic follows a \emph{t-distribution} with \(n - 2\) degrees of
+\] \(SE(b_1)\) is the standard error of the slope estimate (\(b_1\)).
+This statistic follows a \emph{t-distribution} with \(n - 2\) degrees of
 freedom (in simple regression, 2 parameters are estimated), where \(n\)
 is the number of observations. We then examine the \emph{p-value}, which
 tells us how likely it would be to observe such a slope (or more
@@ -16004,16 +15974,12 @@ predicted values, as presented in Figure~\ref{fig-residual-simple-reg}
 (orange dashed lines). In other words, RSE estimates the average
 prediction error of the regression model.
 
-The formula for RSE is:
-
-\[
+The formula for RSE is: \[
 RSE = \sqrt{\frac{SSE}{n-m-1}},
-\]
-
-where \(SSE\) is defined in Equation~\ref{eq-sse}, \(n\) is the number
-of observations, and \(m\) is the number of predictors. The denominator
-(\(n-m-1\)) accounts for the degrees of freedom in the model, adjusting
-for the number of predictors being estimated.
+\] where \(SSE\) is defined in Equation~\ref{eq-sse}, \(n\) is the
+number of observations, and \(m\) is the number of predictors. The
+denominator (\(n-m-1\)) accounts for the degrees of freedom in the
+model, adjusting for the number of predictors being estimated.
 
 A smaller RSE indicates more accurate predictions. For our simple linear
 regression model using the \emph{marketing} dataset, the RSE is:
@@ -16041,13 +16007,9 @@ how good would that line be? That is the idea behind R-squared
 (\(R^2\)), a statistic that measures the proportion of variability in
 the response variable explained by the model.
 
-The formula is:
-
-\[
+The formula is: \[
 R^2 = 1 - \frac{SSE}{SST},
-\]
-
-where \(SSE\) is the sum of squared residuals (Equation~\ref{eq-sse})
+\] where \(SSE\) is the sum of squared residuals (Equation~\ref{eq-sse})
 and \(SST\) is the total sum of squares, representing the total
 variation in the response. \(R^2\) ranges from 0 to 1. A value of 1
 means the model perfectly explains the variation in the outcome; a value
@@ -16074,13 +16036,9 @@ In simple linear regression, there is a direct connection between
 Section~\ref{sec-ch5-correlation-test} of Chapter
 \ref{sec-ch5-statistics}. Specifically, \(R^2\) is the square of the
 Pearson correlation coefficient \(r\) between the predictor and the
-response:
-
-\[
-R^2 = r^2
-\]
-
-Let us verify this in the \emph{marketing} data:
+response: \[
+R^2 = r^2.
+\] Let us verify this in the \emph{marketing} data:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -16114,13 +16072,9 @@ Adding more predictors to a regression model will always increase
 \(R^2\), even if those predictors are not truly useful. This is where
 \emph{Adjusted} \(R^2\) comes in. It compensates for the number of
 predictors in the model, providing a more honest measure of model
-quality. Its formula is:
-
-\[
+quality. Its formula is: \[
 \text{Adjusted } R^2 = 1 - \left(1 - R^2\right) \times \frac{n - 1}{n-m-1},
-\]
-
-where \(n\) is the number of observations and \(m\) is the number of
+\] where \(n\) is the number of observations and \(m\) is the number of
 predictors.
 
 In simple linear regression (where \(m=1\)), Adjusted \(R^2\) is nearly
@@ -16217,23 +16171,16 @@ To illustrate, we expand the previous model, which included only
 of whether a \emph{display (banner) advertising campaign} was active.
 This additional predictor allows us to assess its impact on revenue. The
 general equation for a multiple regression model with \(m\) predictors
-is:
-
-\[
-\hat{y} = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m
-\]
-
-where \(b_0\) is the intercept, and \(b_1, b_2, \dots, b_m\) represent
-the estimated effects of each predictor on the response variable.
+is: \[
+\hat{y} = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
+\] where \(b_0\) is the intercept, and \(b_1, b_2, \dots, b_m\)
+represent the estimated effects of each predictor on the response
+variable.
 
 For our case, the equation with two predictors, \texttt{spend} and
-\texttt{display}, is:
-
-\[
-\widehat{\text{revenue}} = b_0 + b_1 \times \text{spend} + b_2 \times \text{display}
-\]
-
-where \texttt{spend} represents daily advertising expenditure and
+\texttt{display}, is: \[
+\widehat{\text{revenue}} = b_0 + b_1 \times \text{spend} + b_2 \times \text{display},
+\] where \texttt{spend} represents daily advertising expenditure and
 \texttt{display} is a categorical variable (\texttt{yes} or
 \texttt{no}), which R automatically converts into a binary indicator. In
 this case, \texttt{display\ =\ 1} corresponds to an active display
@@ -16280,10 +16227,8 @@ right-hand side of the formula:
 \end{Shaded}
 
 This fits a model with both \texttt{spend} and \texttt{display} as
-predictors of \texttt{revenue}. The estimated regression equation is:
-
-\[
-\widehat{\text{revenue}} = -41.44 + 5.36 \times \text{spend} + 104.29 \times \text{display}
+predictors of \texttt{revenue}. The estimated regression equation is: \[
+\widehat{\text{revenue}} = -41.44 + 5.36 \times \text{spend} + 104.29 \times \text{display}.
 \]
 
 Let us interpret each term:
@@ -16316,19 +16261,15 @@ straightforward way.
 
 Consider a scenario where the company spends 25 euros on advertising
 while running a display campaign (\texttt{display\ =\ 1}). Using the
-regression equation, the predicted revenue is:
-
-\[
-\widehat{\text{revenue}} = -41.44 + 5.36 \times 25 + 104.29 \times 1 = 196.74
+regression equation, the predicted revenue is: \[
+\widehat{\text{revenue}} = -41.44 + 5.36 \times 25 + 104.29 \times 1 = 196.74.
 \]
 
 Thus, the predicted revenue for that day is approximately 196.74 euros.
 
 The residual (prediction error) for a specific observation is calculated
-as the difference between the actual and predicted revenue:
-
-\[
-\text{Residual} = y - \hat{y} = 185.36 - 196.74 = -11.49
+as the difference between the actual and predicted revenue: \[
+\text{Residual} = y - \hat{y} = 185.36 - 196.74 = -11.49.
 \]
 
 The prediction error is less than that of the simple regression model,
@@ -16569,15 +16510,11 @@ approach grounded in statistical theory: \emph{logistic regression}.
 
 Logistic regression is a generalized linear model specifically designed
 for binary outcomes. It estimates the \emph{probability} that an
-observation belongs to a particular class (e.g., churn = 1) by applying
-the \emph{logit function}, which transforms a linear combination of
-predictors into the log-odds of the outcome:
-
-\[
+observation belongs to a particular class (e.g., churn = ``yes'') by
+applying the \emph{logit function}, which transforms a linear
+combination of predictors into the log-odds of the outcome: \[
 \text{logit}(p) = \ln\left(\frac{p}{1 - p}\right) = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
-\]
-
-where \(p\) is the probability that the outcome is 1. The logit
+\] where \(p\) is the probability that the outcome is 1. The logit
 transformation ensures that predictions remain between 0 and 1, making
 logistic regression well-suited for modeling binary events.
 
@@ -16650,8 +16587,7 @@ target variable (\texttt{churn}) and the predictors:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{formula }\OtherTok{=}\NormalTok{ churn }\SpecialCharTok{\textasciitilde{}}\NormalTok{ account.length }\SpecialCharTok{+}\NormalTok{ voice.messages }\SpecialCharTok{+}\NormalTok{ day.mins }\SpecialCharTok{+}\NormalTok{ eve.mins }\SpecialCharTok{+} 
-\NormalTok{                         night.mins }\SpecialCharTok{+}\NormalTok{ intl.mins }\SpecialCharTok{+}\NormalTok{ customer.calls }\SpecialCharTok{+}\NormalTok{ intl.plan }\SpecialCharTok{+}\NormalTok{ voice.plan}
+\NormalTok{formula }\OtherTok{=}\NormalTok{ churn }\SpecialCharTok{\textasciitilde{}}\NormalTok{ account.length }\SpecialCharTok{+}\NormalTok{ voice.messages }\SpecialCharTok{+}\NormalTok{ day.mins }\SpecialCharTok{+}\NormalTok{ eve.mins }\SpecialCharTok{+}\NormalTok{ night.mins }\SpecialCharTok{+}\NormalTok{ intl.mins }\SpecialCharTok{+}\NormalTok{ customer.calls }\SpecialCharTok{+}\NormalTok{ intl.plan }\SpecialCharTok{+}\NormalTok{ voice.plan}
 \end{Highlighting}
 \end{Shaded}
 
@@ -16757,12 +16693,28 @@ of predictive accuracy? You will get to see that soon, in the case study
 later in this chapter. We will not only compare their accuracy, but also
 their interpretability and suitability for different types of decisions.
 
-Finally, just like the \texttt{lm()} function, the \texttt{glm()} model
-supports the \texttt{predict()} function. In the case of logistic
-regression, \texttt{predict()} returns the \emph{predicted
-probabilities} of the reference class (typically the first level of the
-outcome factor). We will explore how to interpret and apply these
-probabilities in the upcoming sections.
+Finally, similar to the \texttt{lm()} function, the \texttt{glm()} model
+also supports the \texttt{predict()} function. In the case of logistic
+regression, \texttt{predict()} returns the predicted probabilities of
+the \textbf{non-reference class}---that is, the second level of the
+outcome factor by default. The reference class is determined by the
+ordering of factor levels in the response variable and can be explicitly
+set using the \texttt{relevel()} function. We will explore how to
+interpret and apply these predicted probabilities in the following
+sections.
+
+\begin{quote}
+\emph{Note:} In logistic regression using \texttt{glm()}, the
+\texttt{predict()} function always returns the probability of the
+\textbf{non-reference class} (typically the second factor level). For
+example, the outcome variable \texttt{churn} has levels \texttt{"yes"}
+and \texttt{"no"}, and \texttt{"yes"} is the first factor level (thus
+the reference level). In this case,
+\texttt{predict(glm\_churn,\ type\ =\ "response")} returns the
+probability of \texttt{"no"}. To change which class is treated as the
+reference, use \texttt{relevel(churn,\ ref\ =\ "no")} before fitting the
+model.
+\end{quote}
 
 \section{Poisson Regression for Modeling Count
 Data}\label{poisson-regression-for-modeling-count-data}
@@ -16798,9 +16750,7 @@ Like logistic regression, Poisson regression belongs to the family of
 generalized linear models (GLMs), extending the ideas introduced in the
 previous section.
 
-The model is defined as:
-
-\[
+The model is defined as: \[
 \ln(\lambda) = b_0 + b_1 x_1 + b_2 x_2 + \dots + b_m x_m,
 \] where \(\lambda\) represents the expected count of events. The
 predictors \(x_1, x_2, \dots, x_m\) affect the log of \(\lambda\). The
@@ -16915,13 +16865,9 @@ Interpreting coefficients in Poisson regression is different from linear
 regression. Coefficients are on the log scale: each unit increase in a
 predictor multiplies the expected count by \(e^{b}\), where \(b\) is the
 coefficient. For instance, if the coefficient for \texttt{intl.plan} is
-0.3:
-
-\[
-e^{0.3} - 1 \approx 0.35
-\]
-
-This means customers with an international plan are expected to make
+0.3: \[
+e^{0.3} - 1 \approx 0.35.
+\] This means customers with an international plan are expected to make
 about 35\% more service calls than those without one, holding other
 predictors constant.
 
@@ -17000,13 +16946,9 @@ compare them, balancing model fit with interpretability.
 One such tool is the \emph{Akaike Information Criterion (AIC)}. AIC
 offers a structured trade-off between model complexity and goodness of
 fit: lower AIC values indicate a more favorable balance between
-explanatory power and simplicity. It is defined as
-
-\[
+explanatory power and simplicity. It is defined as \[
 AIC = 2m + n \log\left(\frac{SSE}{n}\right),
-\]
-
-where \(m\) denotes the number of estimated parameters in the model,
+\] where \(m\) denotes the number of estimated parameters in the model,
 \(n\) is the number of observations, and \(SSE\) is the sum of squared
 errors (as introduced in Equation~\ref{eq-sse}), capturing the total
 unexplained variability in the response variable.
@@ -17021,16 +16963,12 @@ recipe that still delivers excellent flavor.
 
 While AIC is widely used, it is not the only available criterion. An
 alternative is the \emph{Bayesian Information Criterion (BIC)}, which
-applies a stronger penalty for model complexity. It is defined as
-
-\[
+applies a stronger penalty for model complexity. It is defined as \[
 BIC = \log(n) \times m + n \log\left(\frac{SSE}{n}\right),
-\]
-
-where the terms are as previously defined. The penalty in BIC grows with
-the sample size \(n\), causing it to favor more parsimonious models as
-datasets become larger. BIC may be more appropriate when the goal is to
-identify the true underlying model, while AIC is often preferred for
+\] where the terms are as previously defined. The penalty in BIC grows
+with the sample size \(n\), causing it to favor more parsimonious models
+as datasets become larger. BIC may be more appropriate when the goal is
+to identify the true underlying model, while AIC is often preferred for
 optimizing predictive accuracy. The choice depends on context, but both
 criteria reflect the same core idea: balancing fit with parsimony.
 
@@ -17269,10 +17207,8 @@ To examine the final model, we use:
 
 Stepwise regression yields a simpler model with just two predictors:
 \texttt{clicks} and \texttt{display}. The resulting regression equation
-is:
-
-\[
-\widehat{\text{revenue}} = -33.63 + 0.9 \times \text{clicks} + 95.51 \times \text{display}
+is: \[
+\widehat{\text{revenue}} = -33.63 + 0.9 \times \text{clicks} + 95.51 \times \text{display}.
 \]
 
 Model performance improves on several fronts. The \emph{RSE}, which
@@ -17374,10 +17310,8 @@ the limitations of a strictly linear model.
 
 To better model the observed trend, we can introduce non-linear terms
 into the regression equation. If the relationship resembles a curve, a
-quadratic model may be appropriate:
-
-\[
-\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2
+quadratic model may be appropriate: \[
+\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2.
 \]
 
 This formulation includes both the original predictor and its squared
@@ -17434,9 +17368,7 @@ higher-degree terms of the predictor variable, such as squared (\(x^2\))
 or cubic (\(x^3\)) terms. This allows the model to capture non-linear
 relationships while remaining \emph{linear in the coefficients}, meaning
 the model can still be estimated using ordinary least squares. The
-general form of a polynomial regression model is:
-
-\[
+general form of a polynomial regression model is: \[
 \hat{y} = b_0 + b_1 \times x + b_2 \times x^2 + \dots + b_d \times x^d,
 \] where \(d\) represents the degree of the polynomial. While polynomial
 regression increases modeling flexibility, high-degree polynomials
@@ -17507,10 +17439,8 @@ that only 4.43\% of the variability in house prices is explained by
 the relationship.
 
 Next, we fit a quadratic polynomial regression model to allow for
-curvature:
-
-\[
-\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2
+curvature: \[
+\text{unit.price} = b_0 + b_1 \times \text{house.age} + b_2 \times \text{house.age}^2.
 \]
 
 In R, this can be implemented using the \texttt{poly()} function, which
@@ -17620,11 +17550,11 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-1.pdf}
+\includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-1.pdf}
 
 }
 
-\subcaption{\label{fig-ch10-model-diagnostics-1}}
+\subcaption{\label{fig-ch10-model-diagnostics-1}Residuals vs Fitted}
 
 \end{minipage}%
 %
@@ -17632,11 +17562,11 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-2.pdf}
+\includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-2.pdf}
 
 }
 
-\subcaption{\label{fig-ch10-model-diagnostics-2}}
+\subcaption{\label{fig-ch10-model-diagnostics-2}Normal Q-Q}
 
 \end{minipage}%
 \newline
@@ -17644,11 +17574,11 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-3.pdf}
+\includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-3.pdf}
 
 }
 
-\subcaption{\label{fig-ch10-model-diagnostics-3}}
+\subcaption{\label{fig-ch10-model-diagnostics-3}Scale-Location}
 
 \end{minipage}%
 %
@@ -17656,11 +17586,11 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-4.pdf}
+\includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-4.pdf}
 
 }
 
-\subcaption{\label{fig-ch10-model-diagnostics-4}}
+\subcaption{\label{fig-ch10-model-diagnostics-4}Residuals vs Leverage}
 
 \end{minipage}%
 
@@ -17784,9 +17714,8 @@ Section \ref{sec-ch4-EDA-churn}. In the next subsection, we begin the
 data preparation process by partitioning the dataset into training and
 testing sets.
 
-\subsection*{Partitioning and
-Preprocessing}\label{partitioning-and-preprocessing}
-\addcontentsline{toc}{subsection}{Partitioning and Preprocessing}
+\subsection*{Data Setup to Model}\label{data-setup-to-model-4}
+\addcontentsline{toc}{subsection}{Data Setup to Model}
 
 Partitioning the data into training and test sets is a standard step in
 predictive modeling that allows us to estimate how well a model will
@@ -17852,13 +17781,28 @@ Next, we generate predicted probabilities on the test set:
 \end{Highlighting}
 \end{Shaded}
 
-The \texttt{predict()} function returns the estimated probability that
-each customer in the test set has churned, that is, the probability of
-\texttt{churn\ =\ "yes"}.
+By default, the \texttt{predict()} function returns the predicted
+probability of the \textbf{non-reference class} (typically the second
+factor level of the response variable). In the \texttt{churn} dataset,
+the outcome variable has two levels: \texttt{"yes"} and \texttt{"no"}.
+Since \texttt{"yes"} is the first factor level (and therefore the
+reference level), the output of \texttt{predict()} corresponds to the
+probability of \texttt{"no"}. To reverse this and obtain probabilities
+for \texttt{"yes"}, you can redefine the reference level of the data
+before partitioning and fitting the mode:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{churn}\SpecialCharTok{$}\NormalTok{churn }\OtherTok{=} \FunctionTok{relevel}\NormalTok{(churn}\SpecialCharTok{$}\NormalTok{churn, }\AttributeTok{ref =} \StringTok{"no"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
 
 \begin{quote}
 \emph{Reflection:} How might we convert these predicted probabilities
-into binary class labels? What threshold would you use?
+into binary class labels? What threshold would you use? What happens if
+you change the reference level of the \texttt{churn} variable and repeat
+the process? Does the interpretation of the predicted probabilities
+change?
 \end{quote}
 
 \subsection*{Training the Naive Bayes
@@ -17924,7 +17868,7 @@ We apply min-max scaling and binary encoding using the
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{knn\_probs }\OtherTok{=} \FunctionTok{kNN}\NormalTok{(}\AttributeTok{formula =}\NormalTok{ formula, }\AttributeTok{train =}\NormalTok{ train\_set, }
-                  \AttributeTok{test =}\NormalTok{ test\_set, }\AttributeTok{k =} \DecValTok{5}\NormalTok{, }\AttributeTok{scaler =} \StringTok{"minmax"}\NormalTok{, }\AttributeTok{type =} \StringTok{"prob"}\NormalTok{)}
+                \AttributeTok{test =}\NormalTok{ test\_set, }\AttributeTok{k =} \DecValTok{5}\NormalTok{, }\AttributeTok{scaler =} \StringTok{"minmax"}\NormalTok{, }\AttributeTok{type =} \StringTok{"prob"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -17977,11 +17921,11 @@ We visualize all three ROC curves in a single plot:
 \begin{Highlighting}[]
 \FunctionTok{ggroc}\NormalTok{(}\FunctionTok{list}\NormalTok{(roc\_logistic, roc\_bayes, roc\_knn), }\AttributeTok{size =} \FloatTok{0.8}\NormalTok{) }\SpecialCharTok{+} 
   \FunctionTok{scale\_color\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"\#377EB8"}\NormalTok{, }\StringTok{"\#E66101"}\NormalTok{, }\StringTok{"\#4DAF4A"}\NormalTok{),}
-                     \AttributeTok{labels =} \FunctionTok{c}\NormalTok{(}
-                       \FunctionTok{paste}\NormalTok{(}\StringTok{"Logistic (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_logistic), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{),}
-                       \FunctionTok{paste}\NormalTok{(}\StringTok{"Naive Bayes (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_bayes), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{),}
-                       \FunctionTok{paste}\NormalTok{(}\StringTok{"kNN (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_knn), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{)}
-\NormalTok{                     )) }\SpecialCharTok{+}
+           \AttributeTok{labels =} \FunctionTok{c}\NormalTok{(}
+             \FunctionTok{paste}\NormalTok{(}\StringTok{"Logistic (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_logistic), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{),}
+             \FunctionTok{paste}\NormalTok{(}\StringTok{"Naive Bayes (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_bayes), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{),}
+             \FunctionTok{paste}\NormalTok{(}\StringTok{"kNN (AUC ="}\NormalTok{, }\FunctionTok{round}\NormalTok{(}\FunctionTok{auc}\NormalTok{(roc\_knn), }\DecValTok{3}\NormalTok{), }\StringTok{")"}\NormalTok{)}
+\NormalTok{           )) }\SpecialCharTok{+}
   \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"ROC Curves with AUC for Three Models"}\NormalTok{) }\SpecialCharTok{+} 
   \FunctionTok{theme}\NormalTok{(}\AttributeTok{legend.title =} \FunctionTok{element\_blank}\NormalTok{(), }\AttributeTok{legend.position =} \FunctionTok{c}\NormalTok{(.}\DecValTok{7}\NormalTok{, .}\DecValTok{3}\NormalTok{))}
 \end{Highlighting}
@@ -19181,17 +19125,13 @@ geographic regions:
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(forcats)}
 
-\NormalTok{Europe }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"England"}\NormalTok{, }\StringTok{"France"}\NormalTok{, }\StringTok{"Germany"}\NormalTok{, }\StringTok{"Greece"}\NormalTok{, }\StringTok{"Holand{-}Netherlands"}\NormalTok{, }\StringTok{"Hungary"}\NormalTok{, }
-           \StringTok{"Ireland"}\NormalTok{, }\StringTok{"Italy"}\NormalTok{, }\StringTok{"Poland"}\NormalTok{, }\StringTok{"Portugal"}\NormalTok{, }\StringTok{"Scotland"}\NormalTok{, }\StringTok{"Yugoslavia"}\NormalTok{)}
+\NormalTok{Europe }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"England"}\NormalTok{, }\StringTok{"France"}\NormalTok{, }\StringTok{"Germany"}\NormalTok{, }\StringTok{"Greece"}\NormalTok{, }\StringTok{"Holand{-}Netherlands"}\NormalTok{, }\StringTok{"Hungary"}\NormalTok{, }\StringTok{"Ireland"}\NormalTok{, }\StringTok{"Italy"}\NormalTok{, }\StringTok{"Poland"}\NormalTok{, }\StringTok{"Portugal"}\NormalTok{, }\StringTok{"Scotland"}\NormalTok{, }\StringTok{"Yugoslavia"}\NormalTok{)}
 
-\NormalTok{Asia }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"China"}\NormalTok{, }\StringTok{"Hong"}\NormalTok{, }\StringTok{"India"}\NormalTok{, }\StringTok{"Iran"}\NormalTok{, }\StringTok{"Cambodia"}\NormalTok{, }\StringTok{"Japan"}\NormalTok{, }\StringTok{"Laos"}\NormalTok{, }
-         \StringTok{"Philippines"}\NormalTok{, }\StringTok{"Vietnam"}\NormalTok{, }\StringTok{"Taiwan"}\NormalTok{, }\StringTok{"Thailand"}\NormalTok{)}
+\NormalTok{Asia }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"China"}\NormalTok{, }\StringTok{"Hong"}\NormalTok{, }\StringTok{"India"}\NormalTok{, }\StringTok{"Iran"}\NormalTok{, }\StringTok{"Cambodia"}\NormalTok{, }\StringTok{"Japan"}\NormalTok{, }\StringTok{"Laos"}\NormalTok{, }\StringTok{"Philippines"}\NormalTok{, }\StringTok{"Vietnam"}\NormalTok{, }\StringTok{"Taiwan"}\NormalTok{, }\StringTok{"Thailand"}\NormalTok{)}
 
 \NormalTok{N.America }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"Canada"}\NormalTok{, }\StringTok{"United{-}States"}\NormalTok{, }\StringTok{"Puerto{-}Rico"}\NormalTok{)}
 
-\NormalTok{S.America }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"Columbia"}\NormalTok{, }\StringTok{"Cuba"}\NormalTok{, }\StringTok{"Dominican{-}Republic"}\NormalTok{, }\StringTok{"Ecuador"}\NormalTok{, }\StringTok{"El{-}Salvador"}\NormalTok{, }
-              \StringTok{"Guatemala"}\NormalTok{, }\StringTok{"Haiti"}\NormalTok{, }\StringTok{"Honduras"}\NormalTok{, }\StringTok{"Mexico"}\NormalTok{, }\StringTok{"Nicaragua"}\NormalTok{, }
-              \StringTok{"Outlying{-}US(Guam{-}USVI{-}etc)"}\NormalTok{, }\StringTok{"Peru"}\NormalTok{, }\StringTok{"Jamaica"}\NormalTok{, }\StringTok{"Trinadad\&Tobago"}\NormalTok{)}
+\NormalTok{S.America }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\StringTok{"Columbia"}\NormalTok{, }\StringTok{"Cuba"}\NormalTok{, }\StringTok{"Dominican{-}Republic"}\NormalTok{, }\StringTok{"Ecuador"}\NormalTok{, }\StringTok{"El{-}Salvador"}\NormalTok{, }\StringTok{"Guatemala"}\NormalTok{, }\StringTok{"Haiti"}\NormalTok{, }\StringTok{"Honduras"}\NormalTok{, }\StringTok{"Mexico"}\NormalTok{, }\StringTok{"Nicaragua"}\NormalTok{, }\StringTok{"Outlying{-}US(Guam{-}USVI{-}etc)"}\NormalTok{, }\StringTok{"Peru"}\NormalTok{, }\StringTok{"Jamaica"}\NormalTok{, }\StringTok{"Trinadad\&Tobago"}\NormalTok{)}
 
 \CommentTok{\# Reclassify into broader regions}
 \NormalTok{adult}\SpecialCharTok{$}\NormalTok{native.country }\OtherTok{=} \FunctionTok{fct\_collapse}\NormalTok{(adult}\SpecialCharTok{$}\NormalTok{native.country, }
@@ -19227,8 +19167,7 @@ Other categorical variables are adjusted to improve consistency:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{adult}\SpecialCharTok{$}\NormalTok{race }\OtherTok{=} \FunctionTok{fct\_recode}\NormalTok{(adult}\SpecialCharTok{$}\NormalTok{race, }\StringTok{"Amer{-}Indian"} \OtherTok{=} \StringTok{"Amer{-}Indian{-}Eskimo"}\NormalTok{, }
-                                    \StringTok{"Asian"} \OtherTok{=} \StringTok{"Asian{-}Pac{-}Islander"}\NormalTok{)}
+\NormalTok{adult}\SpecialCharTok{$}\NormalTok{race }\OtherTok{=} \FunctionTok{fct\_recode}\NormalTok{(adult}\SpecialCharTok{$}\NormalTok{race, }\StringTok{"Amer{-}Indian"} \OtherTok{=} \StringTok{"Amer{-}Indian{-}Eskimo"}\NormalTok{, }\StringTok{"Asian"} \OtherTok{=} \StringTok{"Asian{-}Pac{-}Islander"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -19237,7 +19176,7 @@ tree-based models generalize better. With these steps complete, the
 dataset is ready for training and evaluation, which we turn to in the
 next section.
 
-\subsection*{Data Setup to Model}\label{data-setup-to-model-4}
+\subsection*{Data Setup to Model}\label{data-setup-to-model-5}
 \addcontentsline{toc}{subsection}{Data Setup to Model}
 
 With the dataset cleaned and categorical variables simplified, we are
@@ -19282,14 +19221,11 @@ Section~\ref{sec-ch6-validate-partition} for more on validation
 techniques.
 
 The set of predictors used for modeling includes variables spanning
-demographic, economic, and employment dimensions:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{age, workclass, education.num, marital.status, occupation,}
-\NormalTok{race, gender, capital.gain, capital.loss, hours.per.week, native.country}
-\end{Highlighting}
-\end{Shaded}
+demographic, economic, and employment dimensions: \texttt{age},
+\texttt{workclass}, \texttt{education.num}, \texttt{marital.status},
+\texttt{occupation}, \texttt{race}, \texttt{gender},
+\texttt{capital.gain}, \texttt{capital.loss}, \texttt{hours.per.week},
+and \texttt{native.country}.
 
 The following variables are excluded for the reasons below:
 
@@ -19309,8 +19245,7 @@ We now define the formula that will be used across all three models:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{formula }\OtherTok{=}\NormalTok{ income }\SpecialCharTok{\textasciitilde{}}\NormalTok{ age }\SpecialCharTok{+}\NormalTok{ workclass }\SpecialCharTok{+}\NormalTok{ education.num }\SpecialCharTok{+}\NormalTok{ marital.status }\SpecialCharTok{+}\NormalTok{ occupation }\SpecialCharTok{+}
-\NormalTok{          race }\SpecialCharTok{+}\NormalTok{ gender }\SpecialCharTok{+}\NormalTok{ capital.gain }\SpecialCharTok{+}\NormalTok{ capital.loss }\SpecialCharTok{+}\NormalTok{ hours.per.week }\SpecialCharTok{+}\NormalTok{ native.country}
+\NormalTok{formula }\OtherTok{=}\NormalTok{ income }\SpecialCharTok{\textasciitilde{}}\NormalTok{ age }\SpecialCharTok{+}\NormalTok{ workclass }\SpecialCharTok{+}\NormalTok{ education.num }\SpecialCharTok{+}\NormalTok{ marital.status }\SpecialCharTok{+}\NormalTok{ occupation }\SpecialCharTok{+}\NormalTok{ race }\SpecialCharTok{+}\NormalTok{ gender }\SpecialCharTok{+}\NormalTok{ capital.gain }\SpecialCharTok{+}\NormalTok{ capital.loss }\SpecialCharTok{+}\NormalTok{ hours.per.week }\SpecialCharTok{+}\NormalTok{ native.country}
 \end{Highlighting}
 \end{Shaded}
 
@@ -19593,7 +19528,8 @@ visualize variable importance:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\FunctionTok{varImpPlot}\NormalTok{(forest\_model)}
+\FunctionTok{varImpPlot}\NormalTok{(forest\_model, }\AttributeTok{col =} \StringTok{"\#377EB8"}\NormalTok{, }
+           \AttributeTok{main =} \StringTok{"Variable Importance in Random Forest Model"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -19609,7 +19545,8 @@ We can also assess how model error evolves as more trees are added:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\FunctionTok{plot}\NormalTok{(forest\_model)}
+\FunctionTok{plot}\NormalTok{(forest\_model, }\AttributeTok{col =} \StringTok{"\#377EB8"}\NormalTok{,}
+     \AttributeTok{main =} \StringTok{"Random Forest Error Rate vs. Number of Trees"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -19692,7 +19629,9 @@ creates easy-to-read graphical summaries:
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{conf.mat.plot}\NormalTok{(cart\_probs, test\_labels, }\AttributeTok{cutoff =} \FloatTok{0.5}\NormalTok{, }\AttributeTok{reference =} \StringTok{"\textless{}=50K"}\NormalTok{, }\AttributeTok{main =} \StringTok{"CART Prediction"}\NormalTok{)}
+ 
 \FunctionTok{conf.mat.plot}\NormalTok{(C50\_probs, test\_labels, }\AttributeTok{cutoff =} \FloatTok{0.5}\NormalTok{, }\AttributeTok{reference =} \StringTok{"\textless{}=50K"}\NormalTok{, }\AttributeTok{main =} \StringTok{"C5.0 Prediction"}\NormalTok{)}
+ 
 \FunctionTok{conf.mat.plot}\NormalTok{(forest\_probs, test\_labels, }\AttributeTok{cutoff =} \FloatTok{0.5}\NormalTok{, }\AttributeTok{reference =} \StringTok{"\textless{}=50K"}\NormalTok{, }\AttributeTok{main =} \StringTok{"Random Forest Prediction"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -20011,7 +19950,7 @@ The \emph{churn} dataset contains information about customer churn
 behavior in a telecommunications company. The goal is to predict whether
 a customer will churn based on various attributes.
 
-\paragraph*{Data Setup to Model}\label{data-setup-to-model-5}
+\paragraph*{Data Setup to Model}\label{data-setup-to-model-6}
 \addcontentsline{toc}{paragraph}{Data Setup to Model}
 
 \begin{enumerate}
@@ -20139,7 +20078,7 @@ redWines Dataset}
 
 Now, apply what you have learned to a real-world regression problem.
 
-\paragraph*{Data Setup to Model}\label{data-setup-to-model-6}
+\paragraph*{Data Setup to Model}\label{data-setup-to-model-7}
 \addcontentsline{toc}{paragraph}{Data Setup to Model}
 
 Load the \emph{redWines} dataset and partition it into a training set
@@ -21155,7 +21094,7 @@ Modeling} in the \emph{Data Science Workflow} introduced in Chapter
 \ref{sec-ch2-intro-data-science} and illustrated in
 Figure~\ref{fig-ch2_DSW}.
 
-\subsection*{Data Setup to Model}\label{data-setup-to-model-7}
+\subsection*{Data Setup to Model}\label{data-setup-to-model-8}
 \addcontentsline{toc}{subsection}{Data Setup to Model}
 
 \emph{How do we know if a model will perform well on customers it has
@@ -21850,7 +21789,7 @@ dataset to build a simple neural network model. This time, you will use
 \emph{all} available features to further explore the dataset, build more
 sophisticated models, and compare performance across techniques.
 
-\paragraph*{Data Setup to Model}\label{data-setup-to-model-8}
+\paragraph*{Data Setup to Model}\label{data-setup-to-model-9}
 \addcontentsline{toc}{paragraph}{Data Setup to Model}
 
 \begin{enumerate}
